--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,7 @@
                     <a href="index.html">
                         <img src="../asset/image/logo.png" alt="" width="125px">
                     </a>
+                    <img src="../asset/image/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
                 </div>
                 <nav>
                     <ul id="MenuItems">
