--- a/HTML/login.html
+++ b/HTML/login.html
@@ -17,27 +17,17 @@
       <div class="navbar">
         <div class="logo">
           <a href="index.html">
-            <img src="../asset/image/logo.png" alt="" width="125px" />
-          </a>
-          <img src="../asset/image/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
+            <img src="../asset/image/logo.png" alt="" width="125px" /></a>
         </div>
         <nav>
           <ul id="MenuItems">
             <li><a href="index.html">Home</a></li>
-            <li class="dropdown">
-              <a href="products.html">Products</a>
-              <ul class="dropdown-content">
-                <li><a href="product1.html">Product 1</a></li>
-                <li><a href="product2.html">Product 2</a></li>
-                <li><a href="product3.html">Product 3</a></li>
-              </ul>
-            </li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="account.html">Account</a></li>
           </ul>
         </nav>
-        
         <a href="cart.html"><img src="../asset/image/cart.png" alt="" width="30px" height="30px" /></a>
         <img src="../asset/image/menu.png" alt="" class="menu-icon" onclick="menutoggle()" />
       </div>
@@ -59,7 +49,7 @@
             <form id="LoginForm">
               <input type="text" placeholder="Username" id="username-lg" required />
               <input type="password" placeholder="Password" id="password-lg" required />
-              <button type="submit" class="btn" >Login</button>
+              <button type="button" class="btn" >Login</button>
               <a href="">Forgot Password</a>
             </form>
             <!-- Register Form -->
@@ -68,7 +58,7 @@
               <input type="email" placeholder="Email" id="email" required />
               <input type="password" placeholder="Password" id="password" required />
               <input type="password" placeholder="Confirm Password" id="confirmpassword" required />
-              <button type="submit" class="btn" >Register</button>
+              <button type="button" class="btn" >Register</button>
             </form>
           </div>
         </div>
@@ -120,20 +110,9 @@
     </div>
   </div>
 
-  <!-- scripts -->
-  <script src="../asset/JS/account.js"></script>
-  <script src="../asset/JS/Register.js"></script>
+  <!-- scripts -->  
+   <script src="../asset/JS/Register.js"></script>
   <script src="../asset/JS/Login.js"></script>
-  <script>
-    document.querySelector('.dropdown').addEventListener('mouseover', function() {
-    this.querySelector('.dropdown-content').style.display = 'block';
-});
-
-document.querySelector('.dropdown').addEventListener('mouseout', function() {
-    this.querySelector('.dropdown-content').style.display = 'none';
-});
-
-  </script>
 </body>
 
 </html>
