Thông điệp commit đầu tiên

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -84,5 +84,7 @@
                 <p class="copyright" id="copyright-text">copyright 2024 - manhdzai</p>
             </div>
         </div>
+        <script src="../asset/JS/auth.js">
+        </script>
 </body>
 </html>
