--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -151,7 +151,10 @@
     </div>
   </div>
   <!-- JS for Toggle menu -->
-  <script src="../asset/JS/cart.js"></script>
+  <script src="../asset/JS/cart.js">
+
+  </script>
+  
 </body>
 
 </html>
