--- a/HTML/account.html
+++ b/HTML/account.html
@@ -24,25 +24,19 @@
         <nav>
           <ul id="MenuItems">
             <li><a href="index.html">Home</a></li>
-            <li class="dropdown">
-              <a href="products.html">Products</a>
-              <ul class="dropdown-content">
-                <li><a href="product1.html">Product 1</a></li>
-                <li><a href="product2.html">Product 2</a></li>
-                <li><a href="product3.html">Product 3</a></li>
-              </ul>
-            </li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
-            <li><a href="account.html">Account</a></li>
+            <li><a href="account.html" id="accountLink">Account</a></li>
           </ul>
         </nav>
         
-        <a href="cart.html"><img src="../asset/image/cart.png" alt="" width="30px" height="30px" /></a>
+        <a href="cart.html" id="cartLink"><img src="../asset/image/cart.png" alt="" width="30px" height="30px" /></a>
         <img src="../asset/image/menu.png" alt="" class="menu-icon" onclick="menutoggle()" />
       </div>
     </div>
   </div>
+
   <div class="account-page">
     <div class="container">
       <div class="row">
@@ -56,84 +50,34 @@
               <span>Register</span>
               <hr id="indicator" />
             </div>
+
+            <!-- Login Form -->
             <form id="LoginForm">
               <input type="text" placeholder="Username" id="username-lg" required />
               <input type="password" placeholder="Password" id="password-lg" required />
-              <button type="submit" class="btn" >Login</button>
+              <button type="submit" class="btn">Login</button>
               <a href="">Forgot Password</a>
             </form>
+
             <!-- Register Form -->
             <form id="RegForm">
               <input type="text" placeholder="Username" id="username" required />
               <input type="email" placeholder="Email" id="email" required />
               <input type="password" placeholder="Password" id="password" required />
               <input type="password" placeholder="Confirm Password" id="confirmpassword" required />
-              <button type="submit" class="btn" >Register</button>
+              <button type="submit" class="btn">Register</button>
             </form>
+
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <!-- Footer -->
-  <div class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="footer-col-1">
-          <h3>Download Our App</h3>
-          <p>
-            Download App for Android <br />
-            and iOS mobile phone
-          </p>
-          <div class="app-logo">
-            <img src="../asset/image/play-store.png" alt="" />
-            <img src="../asset/image/app-store.png" alt="" />
-          </div>
-        </div>
-        <div class="footer-col-2">
-          <img src="../asset/image/logo-white.png" alt="" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-        </div>
-        <div class="footer-col-3">
-          <h3>Useful Links</h3>
-          <ul>
-            <li>Coupons</li>
-            <li>Blog Post</li>
-            <li>Return Policy</li>
-            <li>Join Affiliate</li>
-          </ul>
-        </div>
-        <div class="footer-col-4">
-          <h3>Follow us</h3>
-          <ul>
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Instagram</li>
-            <li>YouTube</li>
-          </ul>
-        </div>
-      </div>
-      <hr />
-      <p class="copyright" id="copyright-text">Copyright 2020 - introidx</p>
     </div>
   </div>
 
-  <!-- scripts -->
   <script src="../asset/JS/account.js"></script>
   <script src="../asset/JS/Register.js"></script>
   <script src="../asset/JS/Login.js"></script>
-  <script>
-    document.querySelector('.dropdown').addEventListener('mouseover', function() {
-    this.querySelector('.dropdown-content').style.display = 'block';
-});
-
-document.querySelector('.dropdown').addEventListener('mouseout', function() {
-    this.querySelector('.dropdown-content').style.display = 'none';
-});
-
-  </script>
+  <script src="../asset/JS/emaijs.js"></script>
+  <script src="../asset/JS/auth.js"></script>
 </body>
-
 </html>
