--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,27 +14,36 @@
     <!-- Header Section -->
      <div class="header">
         <div class="container">
-            <div class="navbar">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="../asset/image/logo.png" alt="" width="125px">
-                    </a>
-                    <img src="../asset/image/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
-                </div>
-                <nav>
-                    <ul id="MenuItems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="products.html">Product</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="account.html">Account</a></li>
-                    </ul>
-                </nav>
-                <a href="cart.html">
-                    <img src="../asset/image/cart.png" alt="" width="30px" height="30px">
+          <div class="navbar" id="navbar">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="../asset/image/logo.png" alt="" width="125px">
                 </a>
-                <img src="../asset/image/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
             </div>
+            <nav>
+                <ul id="MenuItems">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Product</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="account.html">Account</a></li>
+                </ul>
+            </nav>
+            <a href="cart.html">
+                <img src="../asset/image/cart.png" alt="" width="30px" height="30px" margin-right="20px">
+            </a>
+            <!-- Icon menu và dropdown -->
+            <div class="menu-dropdown">
+                <img src="../asset/image/menu.png" alt="" class="menu-icon" width="30px" height="30px">
+                <div id="DropdownMenu" class="dropdown-content">
+                    <a href="index.html">Home</a>
+                    <a href="products.html">Product</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="account.html">Account</a>
+                </div>
+            </div>
+        </div>
             <div class="row">
                 <div class="col-2">
                     <h1>Give Your Workout <br> A New Style</h1>
@@ -378,7 +387,7 @@
                     <div class="footer-col-4">
                         <h3>Follow Us</h3>
                         <ul>
-                            <li href="#">Facebook</li>
+                            <li><a href="https://www.facebook.com/profile.php?id=100094304289411">Facebook</a></li>
                             <li>Twitter</li>
                             <li>Instagram</li>
                             <li>Youtube</li>
@@ -389,6 +398,8 @@
                 <p class="copyright" id="copyright-text">copyright 2024 - manhdzai</p>
             </div>
         </div>
+        <script src="../asset/JS/auth.js">
+
+        </script>
 </body>
-<script></script>
 </html>
