--- a/HTML/product2.html
+++ b/HTML/product2.html
@@ -66,7 +66,7 @@
   
         <div class="col-4" onclick="viewProduct(2)">
           <img src="../asset/image/product-2.jpg" alt="" />
-          <h4>Sports Shoes</h4>
+          <h4>Red Printed T-shirt</h4>
           <div class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -323,8 +323,7 @@
     </div>
   </div>
   <!-- JS for Toggle menu -->
-  <script src="./assets/js/toggleMenu.js"
-  src="../asset/JS/auth.js">
+  <script src="./assets/js/toggleMenu.js">
   </script>
 </body>
 
