--- a/HTML/productdetails.html
+++ b/HTML/productdetails.html
@@ -9,7 +9,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200&display=swap"
     rel="stylesheet" />
- 
 </head>
 
 <body>
@@ -34,43 +33,42 @@
   </div>
 
   <!-- Single Products Detail -->
-  <div class="small-container single-product" id="product-1">
+  <div class="small-container single-product">
     <div class="row">
       <div class="col-2">
-        <img src="../asset/image/gallery-1.jpg" width="100%" id="ProductImg-1" data-product="1"/>
-
+        <img src="" width="100%" id="product-img" />
         <div class="small-img-row">
           <div class="small-img-col">
-            <img src="../asset/image/gallery-1.jpg" class="small-img" data-product="1" />
+            
           </div>
           <div class="small-img-col">
-            <img src="../asset/image/gallery-2.jpg" class="small-img" data-product="1" />
+            <img src="" class="small-img" id="small-img-2" />
           </div>
           <div class="small-img-col">
-            <img src="../asset/image/gallery-3.jpg" class="small-img" data-product="1" />
+            <img src="" class="small-img" id="small-img-3" />
           </div>
           <div class="small-img-col">
-            <img src="../asset/image/gallery-4.jpg" class="small-img" data-product="1" />
+            <img src="" class="small-img" id="small-img-4" />
           </div>
         </div>
       </div>
       <div class="col-2">
-        <p>Home / T-shirt</p>
-        <h2>Red Printed T-Shirt By HRX</h2>
-        <h4>$50.00</h4>
-        <select name="" id="">
+        <p id="product-category">Home / T-shirt</p>
+        <h2 id="product-name">Product Name</h2>
+        <h4 id="product-price">$0.00</h4>
+        <select name="" id="product-size">
           <option value="">Select Size</option>
-          <option value="">XXL</option>
-          <option value="">XL</option>
-          <option value="">Large</option>
-          <option value="">Medium</option>
-          <option value="">Small</option>
+          <option value="XXL">XXL</option>
+          <option value="XL">XL</option>
+          <option value="Large">Large</option>
+          <option value="Medium">Medium</option>
+          <option value="Small">Small</option>
         </select>
-        <input type="number" value="1" />
-        <a href="" class="btn">Add to Cart</a>
+        <input type="number" value="1" id="product-quantity" />
+        <a href="cart.html" class="btn" onclick="addToCart()">Add to Cart</a>
         <h3>Product Details<i class="fa fa-indent"></i></h3>
         <br />
-        <p>
+        <p id="product-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nemo
           nam magnam rerum sunt explicabo! Distinctio ipsam doloremque nostrum
           ipsum?
@@ -190,6 +188,8 @@
     </div>
   </div>
 
-    </script>
+  <script src="../asset/JS/details.js"></script>
+  <script>
+  </script>
 </body>
 </html>
